(tests
  (names test_ppx_mikmatch test_ppx_mikmatch_unused)
  (modules test_ppx_mikmatch test_ppx_mikmatch_unused test_ppx_mikmatch_module)
  (package ppx_mikmatch)
  (libraries ounit2 re re.perl)
  (preprocess (pps ppx_mikmatch)))

(executable
  (name main)
  (modules Main)
  (libraries ppx_mikmatch ocaml-migrate-parsetree))
